--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "✨ ℓσѕт_ιη_тυηє 🎼",
-    "description": "✨ ℓσѕт_ιη_тυηє 🎼 ᴍᴜsɪᴄ is a Telegram Music Player Bot built using Python, leveraging Pyrogram and Py-Tgcalls for seamless music streaming.",
+    "name": "crush music",
+    "description": "Crush Music ᴍᴜsɪᴄ is a Telegram Music Player Bot built using Python, leveraging Pyrogram and Py-Tgcalls for seamless music streaming.",
     "logo": "https://t.me/Forever_crush",
     "keywords": [
         "python3",
