--- a/requirements.txt
+++ b/requirements.txt
@@ -62,3 +62,5 @@ unidecode
 wget
 youtube-search
 youtube-search-python
+git+https://github.com/KurimuzonAkuma/pyrogram.git
+git+https://github.com/yt-dlp/yt-dlp.git
